[gd_scene load_steps=15 format=3 uid="uid://ccsb6sgot5inl"]

[ext_resource type="Script" path="res://tall_grass.gd" id="1_2kayp"]
[ext_resource type="Texture2D" uid="uid://bhdhbe837f83e" path="res://Assets/Grass/tall_grass.png" id="1_umtgj"]
[ext_resource type="Texture2D" uid="uid://c8oxop202kmxs" path="res://Assets/Grass/stepped_tall_grass.png" id="3_10xy2"]
[ext_resource type="Texture2D" uid="uid://h00n4saisspt" path="res://Assets/Grass/grass_step_animation.png" id="4_1lxce"]

[sub_resource type="Animation" id="Animation_0jmtc"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nv60h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yy2pi"]
resource_name = "stepped"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rx8dl"]
_data = {
"RESET": SubResource("Animation_nv60h"),
"idle": SubResource("Animation_0jmtc"),
"stepped": SubResource("Animation_yy2pi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3ra4"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeuqn"]
atlas = ExtResource("4_1lxce")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y5jy"]
atlas = ExtResource("4_1lxce")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42nhm"]
atlas = ExtResource("4_1lxce")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx6m6"]
atlas = ExtResource("4_1lxce")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2vt2e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeuqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y5jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42nhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx6m6")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="TallGrass" type="Node2D"]
script = ExtResource("1_2kayp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_umtgj")
centered = false
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rx8dl")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(8, 8)
scale = Vector2(0.7, 0.7)
shape = SubResource("RectangleShape2D_w3ra4")

[node name="SteppedGrass" type="Sprite2D" parent="."]
visible = false
z_index = 1
z_as_relative = false
position = Vector2(8, 8)
texture = ExtResource("3_10xy2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_2vt2e")
frame = 3
frame_progress = 1.0
centered = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
